# PPoPP25_Artifact_TurboFFT

./: CMakeLists_VkFFT.txt  clean.sh  readme.md  readme_diagram.md  run.sh  run_T4.sh  test_VkFFT.py  test_VkFFT.sh  test_VkFFT_T4.py  test_benchmark.sh  test_codegen.sh  test_compile.sh  test_plot.sh
TurboFFT/: CMakeLists.txt  main.cu  main_t4.cu
TurboFFT/artifact_data/VkFFT_data/: vkFFT.pt  vkFFT_T4.pt
TurboFFT/artifact_data/cuFFT_data/: Benchmark=1_cuFFT_FP32.csv  Benchmark=1_cuFFT_FP32_FT_OFFLINE.csv  Benchmark=1_cuFFT_FP64.csv
TurboFFT/include/: TurboFFT.h  TurboFFT_float2.h  TurboFFT_radix_2_template.h
TurboFFT/include/code_gen/scripts/: fft_codegen.py
TurboFFT/include/cufft/: cufft_ft.h
TurboFFT/include/param/A100/: param_float2.csv
TurboFFT/include/param/T4/: param_float2.csv
TurboFFT/include/turbofft/: macro_ops.h
TurboFFT/include/utils/: CommandLineParser.h
TurboFFT/plot_scripts/: plot.py  plot_fig1.py  plot_fig10.py  plot_fig11.py  plot_fig12.py  plot_fig13.py  plot_fig14.py  plot_fig16.py  plot_fig17.py  plot_fig18.py  plot_fig19.py  plot_fig20.py  plot_fig21.py  plot_fig22.py  utils.py
